--- a/predict.html
+++ b/predict.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-<!--    <script src="./predict.js"></script>-->
+    <script src="predict.js" defer></script>
 </head>
 <body>
 <input type="number" id="battery" placeholder="battery"/>
@@ -16,33 +16,4 @@
 <div id="result"></div>
 
 </body>
-
-<script>
-
-
-    const nn = ml5.neuralNetwork({ task: 'regression', debug: true })
-
-    let battery = document.getElementById('battery')
-    let weight = document.getElementById('weight')
-
-    nn.load('./model/model.json', modelLoaded)
-
-    function modelLoaded() {
-        //yay
-    }
-
-    async function makePrediction() {
-        let valueBattery = parseInt(battery.value)
-        let valueWeight = parseInt(weight.value)
-
-        const results = await nn.predict({ battery: valueBattery, weight: valueWeight })
-
-        // console.log(`Geschatte opslag: ${results[0].storage}`)
-        document.getElementById('result').innerHTML = `Geschatte dikte: ${results[0].thickness} milimeter`
-    }
-
-    document.getElementById('btn').addEventListener('click', makePrediction)
-
-
-</script>
 </html>
